# faah

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.setup/: README.md  install.sh  update.sh
bash/: faah.bash
fzf/: fzf.bash
init/: faah.bash
src/faah/: __init__.py  __main__.py  cli.py  cli_exit.py  doctor.py  error_banner.py  sound.py  terminal_matrix.py
src/faah/data/bash/: faah.bash
src/faah/data/cursor/: README.md
src/faah/data/fzf/: README.md  fzf.bash  fzf.zsh
src/faah/data/init/: faah.bash  faah.zsh
src/faah/data/scripts/: play-faah.sh
src/faah/data/vscode/: README.md  settings.json.fragment
src/faah/data/zsh/: faah.zsh
src/faah/installer/: __init__.py  editor.py  managed.py  rc.py
tests/: test_cli.py  test_cli_exit.py  test_error_banner.py  test_managed.py  test_packaging_integration.py  test_play_direct.py  test_rc.py  test_terminal_matrix.py
vscode/: extensions.json
zsh/: faah.zsh
