[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faah"
dynamic = ["version"]
description = "Shell notification sound on selected exit codes; interactive installer for zsh/bash/fzf."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Erwin Lejeune" }]
keywords = ["shell", "zsh", "bash", "fzf", "sound", "terminal"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Shells",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "build>=1.2.0",
]

[project.scripts]
faah = "faah.cli:main"

[project.urls]
Homepage = "https://github.com/guilyx/faah"
Repository = "https://github.com/guilyx/faah"
Changelog = "https://github.com/guilyx/faah/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/faah/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/faah", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/faah"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
